Role permission, leaves date validation, Dashboard link, OverVire filter, dilter counts in Employee list page

--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -13,7 +13,7 @@
             </div>
             <div class="text-center">
               <div class="text-lg font-extrabold">{{card['count']}} </div>
-              <div class="text-base text-sm">{{card['label']}}</div>
+              <div class="text-base text-base">{{card['label']}}</div>
             </div>
           </div>
         </div>
