--- a/src/app/components/forgot-password/forgot-password.component.html
+++ b/src/app/components/forgot-password/forgot-password.component.html
@@ -53,7 +53,7 @@
             <mat-error>email is required</mat-error>      
            </mat-form-field>
           <div class="flex justify-between -mt-3"  *ngIf="isValidEmail">
-          <span class="text-green-500 font-medium">Code Has Been Sent Your Registered Mail </span>
+          <span class="text-green-500 text-base">Code Has Been Sent Your Registered Mail </span>
           <a href="#">Resend ?</a>
           </div>
           
