--- a/src/app/leaves/balanceleave/balanceleave.component.html
+++ b/src/app/leaves/balanceleave/balanceleave.component.html
@@ -16,7 +16,7 @@
               </div>
               <div class="text-center">
                 <div class="text-lg font-extrabold">{{balance['balance']}}/{{balance['total']}}  </div>
-                <div class="text-base text-sm">{{balance['typeName']}} </div>
+                <div class="text-base text-base">{{balance['typeName']}} </div>
               </div>
             </div>
           </div>
