--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -21,17 +21,17 @@
            
               <div style="display: flex; justify-content: space-between;">
                 <div class="max-w-[60%] p-2 flex flex-col">
-                  <span class="text-grey-400 font-medium "> <i
+                  <span class="text-grey-400 text-base "> <i
                       class="fa-solid fa-user mr-2"></i>{{employee?.personalDetails[0]. firstName | titlecase}} {{employee?.personalDetails[0].lastName | titlecase}} {{employee?. personalDetails[0].middleName | titlecase}}</span>
-                  <!-- <span class="text- font-medium "><i class="fa-solid fa-calendar-days mr-2"></i>
+                  <!-- <span class="text- text-base "><i class="fa-solid fa-calendar-days mr-2"></i>
                     {{employee?.email | date :'dd/MM/yyyy'}}</span> -->
-                  <!-- <span class="text-grey-400 font-medium"><i class="fa-solid fa-suitcase mr-2"></i>
+                  <!-- <span class="text-grey-400 text-base"><i class="fa-solid fa-suitcase mr-2"></i>
                     {{employee?.personalDetails[0].designation | titlecase}} </span> -->
                 </div>
                 <div class="p-2 flex flex-col">
-                  <span class="text-grey-400 font-medium"><i
+                  <span class="text-grey-400 text-base"><i
                       class="fa-solid fa-envelope mr-2"></i>{{employee?.personalDetails[0].email }}</span>
-                  <!-- <span class="text-grey-400 font-medium"><i
+                  <!-- <span class="text-grey-400 text-base"><i
                       class="fa-solid fa-mobile-retro mr-2"></i>{{employee?.personalDetails[0].ph_no }} </span> -->
                 </div>
               </div>
