--- a/src/app/settings/settings/settings.component.html
+++ b/src/app/settings/settings/settings.component.html
@@ -1,11 +1,11 @@
 <div class="flex-auto">
   <div class="flex flex-col">
     <app-content-navbar
-      [isBack]="true"
-      [title]="'Settting'"
+      [isBack]="false"
+      [title]="'Settings'"
     ></app-content-navbar>
     <!-- card design -->
-    <div class="min-h-screen bg-gray-100 my-3">
+    <div class="bg-gray-10">
       <mat-card class="p-6 bg-white px-2 mx-3 my-3">
         <div class="p-2 clear-both">
           <form [formGroup]="setting" enctype="multipart/form-data">
@@ -24,10 +24,10 @@
                     <img *ngIf="!data?.imageUrl" 
                     src="assets/images/setting-logo.jpg"
                       alt="logo"
-                      class="w-48 "
+                      class="w-48"  (click)="logoUpload.click()"
                     />
-                    <img style="object-fit: cover;" *ngIf="data?.imageUrl"  src="{{data?.imageUrl}}" alt="" class="w-48 h-48" />
-                    <span
+                    <img style="object-fit: fill;" *ngIf="data?.imageUrl"  src="{{data?.imageUrl}}" alt="" class="w-48 h-20" />
+                    <span *ngIf="data?.imageUrl"
                       mat-button
                       color="primary"
                       style="bottom: 2px; color: #3f51b5"
@@ -42,7 +42,7 @@
                     <mat-label> Company name</mat-label>
                     <input
                       matInput
-                      placeholder="Please enter companyname"
+                      placeholder="Please enter company name"
                       name="companyName "
                       formControlName="companyName"
                     />
@@ -58,25 +58,21 @@
                     />
                   </mat-form-field>
                   <mat-form-field class="example-full-width">
-                    <mat-label>brandFooter</mat-label>
+                    <mat-label>Brand footer</mat-label>
                     <input
                       matInput
-                      placeholder="Please enter brandFooter"
+                      placeholder="Please enter brand footer"
                       name="brandFooter"
                       formControlName="brandFooter"
                     />
                   </mat-form-field>
                   <mat-form-field class="example-full-width flex">
                     <mat-label>Week off days</mat-label>
-                    <mat-chip-list  name="days" formControlName="weekOff">
-                      <mat-chip   *ngFor="let day of days"   [ngClass]="{'selected' :day.selected }"> {{day.label}}  <mat-icon [ngClass]="{'selected' :day.selected }" matChipRemove  (click)="selectDay(day)" *ngIf="day?.selected">cancel</mat-icon>
-                        <mat-icon matChipRemove  *ngIf="!day?.selected"  (click)="selectDay(day)" >add</mat-icon></mat-chip>
-                    </mat-chip-list>
-                  <!-- <mat-select [(value)]="selected"  name="days" formControlName="weekOff" multiple>
+                  <mat-select  name="days" formControlName="weekOff" multiple>
                     <mat-option *ngFor="let day of days" [value]="day.value">
                       {{day.label}}
                     </mat-option>
-                  </mat-select> -->
+                  </mat-select>
                   </mat-form-field>
                 </div>
               </div>
