--- a/src/app/shared/components/leave/leave.component.html
+++ b/src/app/shared/components/leave/leave.component.html
@@ -30,7 +30,7 @@
                         <span class="material-icons lg:p-3 sm:p-2 md:p-3 p-2 bg-white rounded text-green-300 lg:mx-3">
                             houseboat
                         </span>
-                        <span class="text-center font-normal sm:text-sm lg:text-xl mx-3 text-gray-500">Vacation
+                        <span class="text-center font-normal sm:text-base lg:text-xl mx-3 text-gray-500">Vacation
                             Leave</span>
                     </div>
                     <div class="bg-white p-2 text-center text-gray-500 leading-none">
@@ -47,7 +47,7 @@
                         <span class="material-icons lg:p-3 sm:p-2 p-2 bg-white rounded text-indigo-500 lg:mx-3">
                             holiday_village
                         </span>
-                        <span class="text-center font-normal sm:text-sm lg:text-xl mx-3 text-gray-500">Paid Leave</span>
+                        <span class="text-center font-normal sm:text-base lg:text-xl mx-3 text-gray-500">Paid Leave</span>
                     </div>
                     <div class="bg-white p-2 text-center text-gray-500 leading-none">
                         <span class="text-2xl font-bold">12/</span>
@@ -64,7 +64,7 @@
                             style="    height: 44px;">
                             medication
                         </span>
-                        <span class="text-center font-normal sm:text-sm lg:text-xl mx-3 text-gray-500">Sick Leave</span>
+                        <span class="text-center font-normal sm:text-base lg:text-xl mx-3 text-gray-500">Sick Leave</span>
                     </div>
                     <div class="bg-white p-2 text-center text-gray-500 leading-none">
                         <span class="text-2xl font-bold">12/</span>
