--- a/src/app/user/leavemanagement/leavehistory/leavehistory.component.html
+++ b/src/app/user/leavemanagement/leavehistory/leavehistory.component.html
@@ -7,39 +7,39 @@
             <mat-expansion-panel-header class="shrink">
                 <mat-panel-title class="w-1/4 ">
                     <span class="flex flex-col">
-                        <small class="text-gray-500 font-medium">category</small>
-                        <span class="font-medium"> Leave</span>
+                        <small class="text-gray-500 text-base">category</small>
+                        <span class="text-base"> Leave</span>
                     </span>
                 </mat-panel-title>
                 <mat-panel-title class="w-1/4 ">
                     <span class="flex flex-col">
-                        <small class="text-gray-500 font-medium">Leave Type</small>
-                        <span class="font-medium">{{leave ['type']}}</span>
+                        <small class="text-gray-500 text-base">Leave Type</small>
+                        <span class="text-base">{{leave ['type']}}</span>
                     </span>
                 </mat-panel-title>
                 <mat-panel-title class="w-1/4 ">
                     <span class="flex flex-col">
-                        <small class="text-gray-500 font-medium"> No of days</small>
-                        <span class="font-medium">1</span>
+                        <small class="text-gray-500 text-base"> No of days</small>
+                        <span class="text-base">1</span>
                     </span>
                 </mat-panel-title>
                 <mat-panel-title class="w-1/4 ">
-                    <span class="text-green-500 font-medium"> </span>
+                    <span class="text-green-500 text-base"> </span>
                 </mat-panel-title>
             </mat-expansion-panel-header >
             <mat-divider></mat-divider>
-            <div class="flex lg:text-base text-sm">
-            <span class="lg:w-1/12 w-3/12 text-gray-500 font-medium">Duration :</span>
+            <div class="flex lg:text-base text-base">
+            <span class="lg:w-1/12 w-3/12 text-gray-500 text-base">Duration :</span>
             <span class="w-11/12">08 sep 2022(session1) to  08 sep 2022(session 2)  </span>   
             </div>
-            <div class="flex lg:text-sm ">
-            <span class="lg:w-1/12 w-3/12 text-gray-500 font-medium">Reason :</span>
+            <div class="flex lg:text-base ">
+            <span class="lg:w-1/12 w-3/12 text-gray-500 text-base">Reason :</span>
             <span class="w-11/12"> {{leave['reason']}}</span>   
             </div>
             <mat-action-row >
                     <div class="flex flex-col">
-                        <span class="text-gray-500 font-medium">Applied on </span>
-                        <span class="font-medium">07 Sep 2022</span>
+                        <span class="text-gray-500 text-base">Applied on </span>
+                        <span class="text-base">07 Sep 2022</span>
                     </div>
             </mat-action-row>
         </mat-expansion-panel>
