--- a/src/app/admin/employee/list/list.component.html
+++ b/src/app/admin/employee/list/list.component.html
@@ -20,9 +20,16 @@
               </button>
             </mat-form-field>
           </div>
-          <div class="mx-2">
-            <button mat-button color="primary" (click)="openPopup()">
+          <div class="mx-2 flex">
+
+            <button mat-button color="primary" *ngIf="!filtersLength" (click)="openPopup()">
               <mat-icon>filter_alt</mat-icon>
+            </button>
+            <button mat-button color="primary" *ngIf="filtersLength > 0" matBadge="{{filtersLength}}" (click)="openPopup()">
+              <mat-icon>filter_alt</mat-icon>
+            </button>
+            <button mat-button color="primary" (click)="download()">
+              <mat-icon>download</mat-icon>
             </button>
           </div>
 
