--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -102,7 +102,7 @@
                   </div>
                   <div class="text-center pt-1 mb-12 pb-1">
                     <button
-                      class="inline-block px-6 py-2.5 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:shadow-lg focus:outline-none focus:ring-0 active:shadow-lg transition duration-150 ease-in-out w-full mb-3 gradient"
+                      class="inline-block px-6 py-2.5 text-white text-base text-base leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:shadow-lg focus:outline-none focus:ring-0 active:shadow-lg transition duration-150 ease-in-out w-full mb-3 gradient"
                       type="button"
                       data-mdb-ripple="true"
                       data-mdb-ripple-color="light"
@@ -115,7 +115,7 @@
                     <p class="mb-0 mr-2 ml-2">Don't have an account?</p>
                     <button
                       type="button"
-                      class="inline-block px-6 py-2 border-2 border-red-600 text-red-600 font-medium text-xs leading-tight uppercase rounded hover:bg-black hover:bg-opacity-5 focus:outline-none focus:ring-0 transition duration-150 ease-in-out"
+                      class="inline-block px-6 py-2 border-2 border-red-600 text-red-600 text-base text-base leading-tight uppercase rounded hover:bg-black hover:bg-opacity-5 focus:outline-none focus:ring-0 transition duration-150 ease-in-out"
                       data-mdb-ripple="true"
                       data-mdb-ripple-color="light"
                     >
