--- a/src/app/core/components/dashboard-card/dashboard-card.component.html
+++ b/src/app/core/components/dashboard-card/dashboard-card.component.html
@@ -3,7 +3,7 @@
 >
   <div><i class="material-icons">delete</i></div>
   <div class="text-center">
-    <div class="text-sm font-extrabold">3,256</div>
-    <div class="text-xs">Total Employees</div>
+    <div class="text-base font-extrabold">3,256</div>
+    <div class="text-base">Total Employees</div>
   </div>
 </div>
