--- a/src/app/documents/list/list.component.html
+++ b/src/app/documents/list/list.component.html
@@ -3,7 +3,7 @@
       <app-content-navbar [isBack]="false" [title]="'Document'">
       </app-content-navbar>
   
-      <div class="min-h-screen bg-gray-100">
+      <div class="bg-gray-100">
         <div class="flex justify-end m-3 items-center">
           <div class="ml-7">
             <button class="mx-2" *ngIf="selected_id " mat-raised-button color="primary" (click)="getLetter()">
@@ -17,10 +17,11 @@
 
 
         <div style="margin: 15px" class="letter-container" >
-          <table
+      <no-data-found *ngIf="!documentList?.length"></no-data-found>
+          <table *ngIf="documentList?.length"
           class="flex"
             mat-table
-            [dataSource]="DocumentList "
+            [dataSource]="documentList "
             class="mat-elevation-z8 "
           >
           <ng-container class="right" matColumnDef="selectRadio">
