--- a/src/app/layout/sidebarmenulist/sidebarmenulist.component.scss
+++ b/src/app/layout/sidebarmenulist/sidebarmenulist.component.scss
@@ -2,7 +2,7 @@
 .side-nav-content{
   color: rgb(9, 9, 17);
   font-weight: 400;
-  width: 220px;
+  width: 16rem;
   height: 100%;
   display: block;
   overflow-x: hidden ;
@@ -10,7 +10,7 @@
 }
 
 .expand{
-  width: 220px;
+  width: 16rem;
 }
 .collapse{
   width: 45px;
@@ -67,7 +67,7 @@ transform: scale(1.1);
 .nav-list-item span{
   width: 170px;
   text-transform: capitalize;
-  font-size: 14px;
+  font-size: 1rem;
   font-weight: 400;
 }
 
@@ -89,7 +89,7 @@ transform: scale(1.1);
 }
 span {
   text-transform: capitalize;
-  font-size: 13px;
+  font-size: 1rem;
   font-weight: 400;
 }
 }
@@ -114,6 +114,11 @@ padding: 0px 0px 0px 0px;
 .mat-list-option:hover, .mat-list-option:focus, .mat-nav-list .mat-list-item:hover, .mat-nav-list .mat-list-item:focus, .mat-action-list .mat-list-item:hover, .mat-action-list .mat-list-item:focus{
 background: #3f51b5;
 color: #fff !important;
+::ng-deep{
+  *, ::before, ::after {
+    border-color: #fff;
+}
+}
 }
 .mat-expansion-panel-header.mat-expanded:focus, .mat-expansion-panel-header.mat-expanded:hover{
 color: #fff;
