--- a/src/app/roles/list/list.component.html
+++ b/src/app/roles/list/list.component.html
@@ -1,6 +1,6 @@
 <div class="flex-auto">
     <div class="flex flex-col">
-      <app-content-navbar [isBack]="false" [title]="'Roles'"></app-content-navbar>
+      <app-content-navbar [isBack]="false" [title]="'Role permissions'"></app-content-navbar>
       
       <div class=" bg-gray-100">
         <div class="flex justify-end m-3 items-center">
