--- a/src/app/user/leavemanagement/leave-apply/leave-apply.component.html
+++ b/src/app/user/leavemanagement/leave-apply/leave-apply.component.html
@@ -1,6 +1,6 @@
 <mat-card class="m-4">
   <form [formGroup]="leaveForm">
-    <h3 class="font-medium">Applying for leave</h3>
+    <h3 class="text-base">Applying for leave</h3>
     <div class="grid grid-cols-2 gap-3">
       <mat-form-field appearance="outline">
         <mat-label>leaveType</mat-label>
